src/test/deca/codegen/valid/no-objects/print_int_literal.deca
// Description:
//    Test de println normal.
//
// Resultats:
//    42
//
// Historique:
//    cree le 05/01/2022
{
    int answer = 42;
    println(answer);
}
